[MODORDERS-899] - Update to Java 17 mod-orders